--- a/src/html/select.html
+++ b/src/html/select.html
@@ -11,7 +11,7 @@
                 <tbody>
                     <tr>
                         <td>
-                            <input type="radio" name="mode" value="l" disabled><span class="disabled">大型</span>
+                            <input type="radio" name="mode" value="l"><span>大型</span>
                         </td>
                         <td>
                             <input type="radio" name="mode" value="m" checked><span>中型</span>
@@ -19,10 +19,10 @@
                     </tr>
                     <tr>
                         <td>
-                            <input type="radio" name="mode" value="s" disabled><span class="disabled">小型</span>
+                            <input type="radio" name="mode" value="s"><span>小型</span>
                         </td>
                         <td>
-                            <input type="radio" name="mode" value="xs" disabled><span class="disabled">極小型</span>
+                            <input type="radio" name="mode" value="xs"><span>極小型</span>
                         </td>
                     </tr>
                     <tr>
