--- a/src/html/select.html
+++ b/src/html/select.html
@@ -31,6 +31,7 @@
                 </tbody>
             </table>
         </form>
+        <a href="/src/html/config.html"><small>これの設定など</small></a>
     </div>
     <script type="text/javascript" src="../js/select.js"></script>
 </body>
