almost ready for release v0.2.0

--- a/src/html/config.html
+++ b/src/html/config.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="../css/config.css">
     </head>
     <body>
-        <h3>艦これウィジェット</h3>
+        <h3>艦これウィジェット ver0.2.0</h3>
         <ul>
             <li>設定
                 <ul>
@@ -25,6 +25,13 @@
                     </li>
                     <li>その他のお問い合わせは otiai10@gmail.com までお願いします</li>
                 </ul>
+            </li>
+            <li>リンク
+                <ul>
+                    <li>公式:<a href="http://www.dmm.com/netgame/social/-/gadgets/=/app_id=854854/">艦隊これくしょん</a></li>
+                    <li>このChrome拡張:<a href="https://chrome.google.com/webstore/detail/%E8%89%A6%E3%81%93%E3%82%8C%E3%82%A6%E3%82%A3%E3%82%B8%E3%82%A7%E3%83%83%E3%83%88/iachoklpnnjfgmldgelflgifhdaebnol">艦これウィジェット</a></li>
+                </ul>
+
             </li>
         </ul>
         <script type="text/javascript" src="../js/config.js"></script>
