show time left in popup

--- a/src/html/select.html
+++ b/src/html/select.html
@@ -31,6 +31,11 @@
                 </tbody>
             </table>
         </form>
+        <div id="mission-time-left">
+            <span> -- 遠征隊帰港予定時刻 -- </span>
+            <ul id="time-list-container">
+            </ul>
+        </div>
         <a href="/src/html/config.html"><small>これの設定など</small></a>
     </div>
     <script type="text/javascript" src="../js/select.js"></script>
