refactor : background.js -> definitions/

--- a/src/html/select.html
+++ b/src/html/select.html
@@ -32,7 +32,7 @@
             </table>
         </form>
         <div id="mission-time-left">
-            <span> -- 遠征隊帰港予定時刻 -- </span>
+            <span> -- 遠征隊帰投予定時刻 -- </span>
             <ul id="time-list-container">
             </ul>
         </div>
