improve select UI a little and fix css

--- a/src/html/select.html
+++ b/src/html/select.html
@@ -11,18 +11,26 @@
                 <tbody>
                     <tr>
                         <td>
-                            <input type="radio" name="mode" value="l"><span>大型</span>
+                            <div class="select">
+                                <input type="radio" name="mode" value="l"><span>大型</span>
+                            </div>
                         </td>
                         <td>
-                            <input type="radio" name="mode" value="m" checked><span>中型</span>
+                            <div class="select">
+                                <input type="radio" name="mode" value="m" checked><span>中型</span>
+                            </div>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <input type="radio" name="mode" value="s"><span>小型</span>
+                            <div class="select">
+                                <input type="radio" name="mode" value="s"><span>小型</span>
+                            </div>
                         </td>
                         <td>
-                            <input type="radio" name="mode" value="xs"><span>極小型</span>
+                            <div class="select">
+                                <input type="radio" name="mode" value="xs"><span>極小型</span>
+                            </div>
                         </td>
                     </tr>
                     <tr>
