fix select : when icon cliecked, flash KCWidgetWindow

--- a/src/html/select.html
+++ b/src/html/select.html
@@ -46,6 +46,8 @@
         </div>
         <a href="/src/html/config.html"><small>これの設定など</small></a>
     </div>
+    <script type="text/javascript" src="../js/definitions/models/MyStorage.js"></script>
+    <script type="text/javascript" src="../js/definitions/Util.js"></script>
     <script type="text/javascript" src="../js/select.js"></script>
 </body>
 </html>
