--- a/src/html/config.html
+++ b/src/html/config.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="../css/config.css">
     </head>
     <body>
-        <h3>艦これウィジェット ver0.2.4</h3>
+        <h3>艦これウィジェット<br>ver0.2.4</h3>
         <ul>
             <li>設定
                 <ul>
