--- a/src/html/config.html
+++ b/src/html/config.html
@@ -10,6 +10,7 @@
             <li>設定
                 <ul>
                     <li>遠征発着のポップアップするならチェック:<input type="checkbox" name="doAlert" id="doAlert"></li>
+                    <li><a href="src/html/more.html">もっとリッチな設定する！</a></li>
                 </ul>
             </li>
             <li>これについて
