--- a/src/html/more.html
+++ b/src/html/more.html
@@ -22,24 +22,24 @@
                     <td><input type="checkbox" checked></td>
                 </tr>
                 <tr>
-                    <td>最初に出てくる文字</td>
-                    <td><input type="text" size="50" placeholder="提督 仕事しろ"></td>
+                    <td class="yet">最初に出てくる文字</td>
+                    <td><input type="text" size="50" placeholder="提督 仕事しろ" disabled></td>
                 </tr>
                 <tr>
-                    <td>入渠時・建造時の任意リマインダ機能を有効にする</td>
-                    <td><input type="checkbox" checked></td>
+                    <td class="yet">入渠時・建造時のリマインダ手動設定機能を有効にする</td>
+                    <td><input type="checkbox" disabled></td>
                 </tr>
                 <tr>
-                    <td>デイリー実績(遠征回数とか)を表示する</td>
-                    <td><input type="checkbox" checked></td>
+                    <td class="yet">デイリー実績(遠征回数とか)を表示する</td>
+                    <td><input type="checkbox" disabled></td>
                 </tr>
                 <tr>
-                    <td>建造レシピメモ</td>
-                    <td><input type="text" size="50" placeholder="400/10/600/10 とか"></td>
+                    <td class="yet">建造レシピメモ</td>
+                    <td><input type="text" size="50" placeholder="400/10/600/10 とか" disabled></td>
                 </tr>
                 <tr>
-                    <td>開発レシピメモ</td>
-                    <td><input type="text" size="50" placeholder="20/60/10/110 とか"> </td>
+                    <td class="yet">開発レシピメモ</td>
+                    <td><input type="text" size="50" placeholder="20/60/10/110 とか" disabled> </td>
                 </tr>
                 <tr>
                     <td colspan="2"><h4>おしらせ</h4></td>
