show in select.html (TODO: affect config)

--- a/src/html/select.html
+++ b/src/html/select.html
@@ -44,9 +44,18 @@
             <ul id="time-list-container">
             </ul>
         </div>
+        <div id="achievements">
+            <span> -- 本日任務実績 -- </span>
+            <ul id="achievements-daily">
+            </ul>
+            <span> -- 今週任務実績 -- </span>
+            <ul id="achievements-weekly">
+            </ul>
+        </div>
         <a href="/src/html/config.html"><small>これの設定など</small></a>
     </div>
     <script type="text/javascript" src="../js/definitions/models/MyStorage.js"></script>
+    <script type="text/javascript" src="../js/definitions/models/achievements/Achievements.js"></script>
     <script type="text/javascript" src="../js/definitions/Util.js"></script>
     <script type="text/javascript" src="../js/select.js"></script>
 </body>
