--- a/src/html/more.html
+++ b/src/html/more.html
@@ -22,16 +22,16 @@
                     <td><input id="badge-left-time" type="checkbox"></td>
                 </tr>
                 <tr class="yet">
-                    <td>入渠時・建造時のリマインダ手動設定機能を有効にする</td>
+                    <td>入渠時・建造時のリマインダ手動設定機能を有効にする（注意：手動です！）</td>
                     <td><input type="checkbox" disabled></td>
+                </tr>
+                <tr>
+                    <td>任務実績(遠征回数とか)を記録・表示する</td>
+                    <td><input id="record-achievements" type="checkbox"></td>
                 </tr>
                 <tr class="yet">
                     <td>最初に出てくる文字</td>
                     <td><input type="text" size="50" placeholder="提督 仕事しろ" disabled></td>
-                </tr>
-                <tr class="yet">
-                    <td>デイリー実績(遠征回数とか)を表示する</td>
-                    <td><input type="checkbox" disabled></td>
                 </tr>
                 <tr class="yet">
                     <td>建造レシピメモ</td>
@@ -46,7 +46,7 @@
                 </tr>
                 <tr>
                     <td>現在までに報告されている「ウィジェット内でできないこと」</td>
-                    <td>
+                    <td class="sorry">
                         <ul>
                             <li>× アイテム課金とかする</li>
                             <li>× 艦隊名の変更</li>
