fix interface for achievements

--- a/src/html/more.html
+++ b/src/html/more.html
@@ -26,7 +26,7 @@
                     <td><input type="checkbox" disabled></td>
                 </tr>
                 <tr>
-                    <td>任務実績(遠征回数とか)を記録・表示する</td>
+                    <td>任務実績(遠征回数とか)を記録・表示する<br><span class="xsmall">デイリーは毎朝5時、ウィークリーは毎月曜日朝5時にリセットらしいです</span></td>
                     <td><input id="record-achievements" type="checkbox"></td>
                 </tr>
                 <tr class="yet">
