--- a/src/html/more.html
+++ b/src/html/more.html
@@ -22,7 +22,7 @@
                     <td><input id="badge-left-time" type="checkbox"></td>
                 </tr>
                 <tr class="yet">
-                    <td>入渠時・建造時のリマインダ手動設定機能を有効にする（注意：手動です！）</td>
+                    <td>入渠時・建造時のリマインダ手動設定機能を有効にする<br><span class="xsmall">注意：やっぱり手動設定です！ しょうがないじゃん固定値じゃないんだもん</span></td>
                     <td><input type="checkbox" disabled></td>
                 </tr>
                 <tr>
