affect params to frontend js

--- a/src/html/set_createship.html
+++ b/src/html/set_createship.html
@@ -8,11 +8,11 @@
 <body>
     <div id="header" class="content">
         <div id="reminder-title">
-            第<span id="dock_id">1</span>建造ドック完了通知
+            第<span id="api_kdock_id">1</span>建造ドック完了通知登録しますか？
         </div>
         <div id="materials">
             <span>
-                <span id="api_item1">400</span>/<span id="api_item02">30</span>/<span id="api_item3">600</span>/<span id="api_item4">30</span>
+                <span id="api_item1">400</span>/<span id="api_item2">30</span>/<span id="api_item3">600</span>/<span id="api_item4">30</span>
             </span>
         </div>
     </div>
@@ -49,7 +49,7 @@
     <div id="footer" class="content">
         <button id="register-cancel" class="btn">今回はいいです</button><button id="register-commit" class="btn">登録</button>
     </div>
-    <script type="text/javascript" src="../js/pages/set_manual_timer.js"></script>
-    <script type="text/javascript" src="../js/pages/set_creation.js"></script>
+    <script type="text/javascript" src="../js/pages/set_manual_timer_base.js"></script>
+    <script type="text/javascript" src="../js/pages/set_createship.js"></script>
 </body>
 </html>
