interface for save createships events

--- a/src/html/set_createship.html
+++ b/src/html/set_createship.html
@@ -51,6 +51,8 @@
     </div>
     <script type="text/javascript" src="../js/pages/util.js"></script>
     <script type="text/javascript" src="../js/pages/set_manual_timer_base.js"></script>
+    <script type="text/javascript" src="../js/definitions/models/MyStorage.js"></script>
+    <script type="text/javascript" src="../js/definitions/models/createships/Createships.js"></script>
     <script type="text/javascript" src="../js/pages/set_createship.js"></script>
 </body>
 </html>
