view left time for createships

--- a/src/html/select.html
+++ b/src/html/select.html
@@ -41,11 +41,16 @@
                 </table>
             </div>
         </form>
-        <div id="mission-time-left">
+        <div id="time-left">
             <div class="content">
-                <span> -- 遠征隊帰投予定時刻 -- </span>
-                <ul id="time-list-container">
-                </ul>
+                <div id="time-list-wrapper-missions">
+                    <span> -- 遠征隊帰投予定時刻 -- </span>
+                    <ul id="time-list-container"></ul>
+                </div>
+                <div id="time-list-wrapper-createships">
+                    <span> -- 建造完了予定時刻 -- </span>
+                    <ul id="time-list-container-createships"></ul>
+                </div>
             </div>
         </div>
         <div id="achievements">
@@ -67,6 +72,6 @@
     <script type="text/javascript" src="../js/definitions/models/MyStorage.js"></script>
     <script type="text/javascript" src="../js/definitions/models/achievements/Achievements.js"></script>
     <script type="text/javascript" src="../js/definitions/Util.js"></script>
-    <script type="text/javascript" src="../js/select.js"></script>
+    <script type="text/javascript" src="../js/pages/select.js"></script>
 </body>
 </html>
