--- a/src/html/more.html
+++ b/src/html/more.html
@@ -18,6 +18,10 @@
                     <td>0.2.6</td>
                 </tr>
                 <tr>
+                    <td>遠征発着のポップアップ</td>
+                    <td><input type="checkbox" name="doAlert" id="doAlert"></td>
+                </tr>
+                <tr>
                     <td>残り時間をバッチ表示する<a href="https://pbs.twimg.com/media/BTJoojqCMAAqFy3.png"><img src="https://pbs.twimg.com/media/BTNXZaCCIAADciW.png" width="30px"></a></td>
                     <td><input id="badge-left-time" type="checkbox"></td>
                 </tr>
@@ -40,6 +44,10 @@
                 <tr class="yet">
                     <td>開発レシピメモ</td>
                     <td><input type="text" size="50" placeholder="20/60/10/110 とか" disabled> </td>
+                </tr>
+                <tr class="yet">
+                    <td>通知時に音声を再生</td>
+                    <td><input type="text" size="50" placeholder="任意のURL、ファイルを再生とか" disabled> </td>
                 </tr>
                 <tr>
                     <td colspan="2"><h4>おしらせ</h4></td>
