--- a/src/html/select.html
+++ b/src/html/select.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <div id="main">
-        <h2>提督 仕事しろ</h2>
+        <h2 id="title">提督 仕事しろ</h2>
         <form id="config">
             <div class="content">
                 <table>
@@ -62,7 +62,7 @@
                 <input name="reset-weekly" class="reset-achievements" target="weekly" type="submit" value="reset"><br>
             </div>
         </div>
-        <a href="/src/html/config.html"><small>これの設定など</small></a>
+<!--         <a href="/src/html/config.html"><small>これの設定など</small></a> -->
     </div>
     <script type="text/javascript" src="../js/definitions/models/MyStorage.js"></script>
     <script type="text/javascript" src="../js/definitions/models/achievements/Achievements.js"></script>
