create interface to enable manual-reminder

--- a/src/html/more.html
+++ b/src/html/more.html
@@ -21,9 +21,9 @@
                     <td>残り時間をバッチ表示する<a href="https://pbs.twimg.com/media/BTJoojqCMAAqFy3.png"><img src="https://pbs.twimg.com/media/BTNXZaCCIAADciW.png" width="30px"></a></td>
                     <td><input id="badge-left-time" type="checkbox"></td>
                 </tr>
-                <tr class="yet">
-                    <td>入渠時・建造時のリマインダ手動設定機能を有効にする<br><span class="xsmall">注意：やっぱり手動設定です！ しょうがないじゃん固定値じゃないんだもん</span></td>
-                    <td><input type="checkbox" disabled></td>
+                <tr>
+                    <td>入渠時・建造時のリマインダ手動登録機能を有効にする<br><span class="xsmall">注意：やっぱり手動設定です！ しょうがないじゃん固定値じゃないんだもん</span></td>
+                    <td><input id="enable-manual-reminder" type="checkbox"></td>
                 </tr>
                 <tr>
                     <td>任務実績(遠征回数とか)を記録・表示する<br><span class="xsmall">デイリーは毎朝5時、ウィークリーは毎月曜日朝5時にリセットらしいです</span></td>
