move page js to js/pages/

--- a/src/html/more.html
+++ b/src/html/more.html
@@ -73,6 +73,6 @@
         <h4><span id="close-config" class="clickable">[とじる]</span></h4>
     </div>
     <script type="text/javascript" src="../js/definitions/models/MyStorage.js"></script>
-    <script type="text/javascript" src="../js/more.js"></script>
+    <script type="text/javascript" src="../js/pages/more.js"></script>
 </body>
 </html>
