--- a/src/html/config.html
+++ b/src/html/config.html
@@ -35,6 +35,6 @@
 
             </li>
         </ul>
-        <script type="text/javascript" src="../js/config.js"></script>
+        <script type="text/javascript" src="../js/pages/config.js"></script>
     </body>
 </html>
