use Constants in page scripts

--- a/src/html/select.html
+++ b/src/html/select.html
@@ -69,6 +69,7 @@
         </div>
         <a href="/src/html/config.html"><small>これの設定など</small></a>
     </div>
+    <script type="text/javascript" src="../js/Constants.js"></script>
     <script type="text/javascript" src="../js/definitions/models/MyStorage.js"></script>
     <script type="text/javascript" src="../js/definitions/models/achievements/Achievements.js"></script>
     <script type="text/javascript" src="../js/definitions/Util.js"></script>
