show left time of Nyukyo in popup

--- a/src/html/select.html
+++ b/src/html/select.html
@@ -47,6 +47,10 @@
                     <span> -- 遠征隊帰投予定時刻 -- </span>
                     <ul id="time-list-container"></ul>
                 </div>
+                <div id="time-list-wrapper-nyukyos">
+                    <span> -- 入渠修復完了予定時刻 -- </span>
+                    <ul id="time-list-container-nyukyos"></ul>
+                </div>
                 <div id="time-list-wrapper-createships">
                     <span> -- 建造完了予定時刻 -- </span>
                     <ul id="time-list-container-createships"></ul>
