--- a/src/html/select.html
+++ b/src/html/select.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <div id="main">
-        <h2>提督 仕事しろ</h2>
+        <h2 id="popup-select-title">提督 仕事しろ</h2>
         <form id="config">
             <div class="content">
                 <table>
