form for popup select title

--- a/src/html/more.html
+++ b/src/html/more.html
@@ -29,9 +29,9 @@
                     <td>任務実績(遠征回数とか)を記録・表示する<br><span class="xsmall">デイリーは毎朝5時、ウィークリーは毎月曜日朝5時にリセットらしいです</span></td>
                     <td><input id="record-achievements" type="checkbox"></td>
                 </tr>
-                <tr class="yet">
+                <tr>
                     <td>最初に出てくる文字</td>
-                    <td><input type="text" size="50" placeholder="提督 仕事しろ" disabled></td>
+                    <td><input id="popup-select-title" type="text" size="50" placeholder="提督 仕事しろ"></td>
                 </tr>
                 <tr class="yet">
                     <td>建造レシピメモ</td>
