--- a/src/html/more.html
+++ b/src/html/more.html
@@ -42,6 +42,15 @@
                     <td><input type="text" size="50" placeholder="20/60/10/110 とか" disabled> </td>
                 </tr>
                 <tr>
+                    <td>通知時アイコン画像</td>
+                    <td>
+                        <input id="notification-img-url" type="url" size="50" placeholder="http://otiai10.com/public/img/kagasan.jpg" value="">
+                        <input type="submit" id="notification-img-url-commit" target="notification-img-url" display="notification-img" value="→">
+                        <img width="100" id="notification-img">
+                        <span id="notification-img-validation" class="validation-message"></span>
+                    </td>
+                </tr>
+                <tr>
                     <td colspan="2"><h4>おしらせ</h4></td>
                 </tr>
                 <tr>
