fix bug : show correct dock id in popup

--- a/src/html/set_nyukyo.html
+++ b/src/html/set_nyukyo.html
@@ -8,7 +8,7 @@
 <body>
     <div id="header" class="content">
         <div id="reminder-title">
-            第<span id="api_kdock_id">1</span>入渠ドック完了通知登録しますか？
+            第<span id="api_ndock_id">1</span>入渠ドック完了通知登録しますか？
         </div>
     </div>
     <div id="main" class="content">
