improve : Presentation when reminder is committed

--- a/src/html/set_nyukyo.html
+++ b/src/html/set_nyukyo.html
@@ -47,6 +47,7 @@
     <script type="text/javascript" src="../js/pages/util.js"></script>
     <script type="text/javascript" src="../js/pages/set_manual_timer_base.js"></script>
     <script type="text/javascript" src="../js/definitions/models/MyStorage.js"></script>
+    <script type="text/javascript" src="../js/definitions/Util.js"></script>
     <script type="text/javascript" src="../js/definitions/models/events/EventsBase.js"></script>
     <script type="text/javascript" src="../js/definitions/models/events/nyukyos/Nyukyo.js"></script>
     <script type="text/javascript" src="../js/definitions/models/events/nyukyos/Nyukyos.js"></script>
