enable to rollback default icon

--- a/src/html/more.html
+++ b/src/html/more.html
@@ -81,6 +81,7 @@
         </table>
         <h4><span id="close-config" class="clickable">[とじる]</span></h4>
     </div>
+    <script type="text/javascript" src="../js/Constants.js"></script>
     <script type="text/javascript" src="../js/definitions/models/MyStorage.js"></script>
     <script type="text/javascript" src="../js/pages/more.js"></script>
 </body>
