--- a/src/html/more.html
+++ b/src/html/more.html
@@ -77,6 +77,29 @@
                         まで
                     </td>
                 </tr>
+                <tr>
+                    <td>
+                        <a href="https://twitter.com/KanColle_STAFF/statuses/373961855586140161">公式から</a>
+                    </td>
+                    <td>
+                        艦これウィジェットはブラウザの表示領域抽出と、プレー中に発生するリクエストを検出して（改ざんはしてないココがミソ）ポップアップ出してるだけなので、チート的な要素はゼロだと思ってます。
+                        大前提として<b>「イケナイことはしない！」「運営困らせない！」<a href="https://twitter.com/otiai10/status/373977136891064320">参考</a></b>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2"><h4>謝辞</h4></td>
+                </tr>
+                <tr>
+                    <td><a href="https://twitter.com/KanColle_STAFF">「艦これ」公式</a>殿</td>
+                    <td>いつも楽しくあそばせて頂いております！ありがとうございます！</td>
+                </tr>
+                <tr>
+                    <td colspan="2"><a href="https://github.com/otiai10/kanColleWidget/network/members">開発者のみなさん</a></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td style="text-align: right">and <a href="https://twitter.com/search?q=%E8%89%A6%E3%81%93%E3%82%8C%E3%82%A6%E3%82%A3%E3%82%B8%E3%82%A7%E3%83%83%E3%83%88&src=typd&mode=realtime">you</a></td>
+                </tr>
             </tbody>
         </table>
         <h4><span id="close-config" class="clickable">[とじる]</span></h4>
