--- a/src/html/set_createship.html
+++ b/src/html/set_createship.html
@@ -49,6 +49,7 @@
     <div id="footer" class="content">
         <button id="register-cancel" class="btn">今回はいいです</button><button id="register-commit" class="btn">登録</button>
     </div>
+    <script type="text/javascript" src="../js/Constants.js"></script>
     <script type="text/javascript" src="../js/pages/util.js"></script>
     <script type="text/javascript" src="../js/pages/set_manual_timer_base.js"></script>
     <script type="text/javascript" src="../js/definitions/models/MyStorage.js"></script>
