--- a/src/html/more.html
+++ b/src/html/more.html
@@ -42,12 +42,24 @@
                     <td><input type="text" size="50" placeholder="20/60/10/110 とか" disabled> </td>
                 </tr>
                 <tr>
+                    <td>通知時に音声を再生</td>
+                    <td>
+                    	<input id="notification-sound" type="checkbox" />
+                    	<input id="notification-sound-url" type="text" size="50" placeholder="ローカルファイルもしくはURL" value=""/>
+                    	<input type="submit" id="notification-sound-url-commit" value="テスト"/><br/>
+                    	<input id="notification-sound-volume" type="range" target="notification-sound-volume-text" min="0" max="100" value="100" />
+                    	<span>ボリューム<span id="notification-sound-volume-text">100</span></span><br/>
+                    	<span>ローカルファイル(5MBまで)<input id="notification-sound-file" target="notification-sound-url" type="file" accept="audio/*"/></span>
+                    </td>
+                </tr>
+                <tr>
                     <td>通知時アイコン画像</td>
                     <td>
                         <input id="notification-img-url" type="url" size="50" placeholder="http://otiai10.com/public/img/kagasan.jpg" value="">
                         <input type="submit" id="notification-img-url-commit" target="notification-img-url" display="notification-img" value="→">
                         <img width="100" id="notification-img">
-                        <span id="notification-img-validation" class="validation-message"></span>
+                        <span id="notification-img-validation" class="validation-message"></span><br/>
+                        <span>ローカルファイル(5MBまで)<input id="notification-img-file" target="notification-img-url" type="file" accept="image/*"/></span>
                     </td>
                 </tr>
                 <tr>
@@ -106,6 +118,8 @@
     </div>
     <script type="text/javascript" src="../js/Constants.js"></script>
     <script type="text/javascript" src="../js/definitions/models/MyStorage.js"></script>
+    <script type="text/javascript" src="../js/definitions/models/FileSystem.js"></script>
+    <script type="text/javascript" src="../js/definitions/Util.js"></script>
     <script type="text/javascript" src="../js/pages/more.js"></script>
 </body>
 </html>
