--- a/src/html/select.html
+++ b/src/html/select.html
@@ -35,7 +35,10 @@
                             </td>
                         </tr>
                         <tr>
-                            <td colspan="2"><input id="launch" name="launch" type="submit" value="LAUNCH APP" tabindex="0"/></td>
+                            <td colspan="2">
+	                            <input id="launch" name="launch" type="submit" value="LAUNCH APP" tabindex="0"/>
+	                            <input id="screen-shot"  name="screen-shot" type="submit" value="SS" tabindex="1"/>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
