--- a/src/html/more.html
+++ b/src/html/more.html
@@ -44,22 +44,21 @@
                 <tr>
                     <td>通知時に音声を再生</td>
                     <td>
-                    	<input id="notification-sound" type="checkbox" />
-                    	<input id="notification-sound-url" type="text" size="50" placeholder="ローカルファイルもしくはURL" value=""/>
-                    	<input type="submit" id="notification-sound-url-commit" value="テスト"/><br/>
-                    	<input id="notification-sound-volume" type="range" target="notification-sound-volume-text" min="0" max="100" value="100" />
-                    	<span>ボリューム<span id="notification-sound-volume-text">100</span></span><br/>
-                    	<span>ローカルファイル(5MBまで)<input id="notification-sound-file" target="notification-sound-url" type="file" accept="audio/*"/></span>
+                        <input type="submit" id="notification-test" value="テスト"/><span id="notification-sound-file-already-set"></span>
+                        <hr>
+                        <input id="notification-sound-file" target="notification-sound-url" type="file" accept="audio/*"/><br/>
+                        <span class="xsmall">1回選択してキャンセルするとデフォルトに戻せます</span><br>
+                        <span  id="notification-sound-file-validation" class="xsmall validation-message"></span>
                     </td>
                 </tr>
                 <tr>
                     <td>通知時アイコン画像</td>
                     <td>
-                        <input id="notification-img-url" type="url" size="50" placeholder="http://otiai10.com/public/img/kagasan.jpg" value="">
-                        <input type="submit" id="notification-img-url-commit" target="notification-img-url" display="notification-img" value="→">
-                        <img width="100" id="notification-img">
-                        <span id="notification-img-validation" class="validation-message"></span><br/>
-                        <span>ローカルファイル(5MBまで)<input id="notification-img-file" target="notification-img-url" type="file" accept="image/*"/></span>
+                        <input type="submit" class="notification-test" value="テスト"/><img width="100" id="notification-img">
+                        <hr>
+                        <input id="notification-img-file" target="notification-img-url" type="file" accept="image/*"/><br/>
+                        <span class="xsmall">1回選択してキャンセルするとデフォルトに戻せます</span><br>
+                        <span id="notification-img-file-validation" class="xsmall validation-message"></span>
                     </td>
                 </tr>
                 <tr>
