squash 2files : js/pages/util.js and js/definitions/Util.js to js/Util.js

--- a/src/html/more.html
+++ b/src/html/more.html
@@ -118,7 +118,7 @@
     <script type="text/javascript" src="../js/Constants.js"></script>
     <script type="text/javascript" src="../js/definitions/models/MyStorage.js"></script>
     <script type="text/javascript" src="../js/definitions/models/FileSystem.js"></script>
-    <script type="text/javascript" src="../js/definitions/Util.js"></script>
+    <script type="text/javascript" src="../js/Util.js"></script>
     <script type="text/javascript" src="../js/pages/more.js"></script>
 </body>
 </html>
