--- a/src/html/set_createship.html
+++ b/src/html/set_createship.html
@@ -44,11 +44,10 @@
     <div id="footer" class="content">
         <button id="register-cancel" class="btn">今回はいいです</button><button id="register-commit" class="btn">登録</button>
     </div>
+    <script type="text/javascript" src="../js/Util.js"></script>
     <script type="text/javascript" src="../js/Constants.js"></script>
-    <script type="text/javascript" src="../js/pages/util.js"></script>
     <script type="text/javascript" src="../js/pages/set_manual_timer_base.js"></script>
     <script type="text/javascript" src="../js/definitions/models/MyStorage.js"></script>
-    <script type="text/javascript" src="../js/definitions/Util.js"></script>
     <script type="text/javascript" src="../js/definitions/models/events/EventsBase.js"></script>
     <script type="text/javascript" src="../js/definitions/models/events/createships/Createship.js"></script>
     <script type="text/javascript" src="../js/definitions/models/events/createships/Createships.js"></script>
