--- a/src/html/select.html
+++ b/src/html/select.html
@@ -79,7 +79,7 @@
     <script type="text/javascript" src="../js/Constants.js"></script>
     <script type="text/javascript" src="../js/definitions/models/MyStorage.js"></script>
     <script type="text/javascript" src="../js/definitions/models/achievements/Achievements.js"></script>
-    <script type="text/javascript" src="../js/definitions/Util.js"></script>
+    <script type="text/javascript" src="../js/Util.js"></script>
     <script type="text/javascript" src="../js/pages/select.js"></script>
 </body>
 </html>
