add config checkbox about screenshot

--- a/src/html/more.html
+++ b/src/html/more.html
@@ -30,6 +30,10 @@
                     <td><input id="record-achievements" type="checkbox"></td>
                 </tr>
                 <tr>
+                    <td>スクショボタン表示<br><span class="xsmall">スク水とは違います</span></td>
+                    <td><input id="enable-screen-shot" type="checkbox"></td>
+                </tr>
+                <tr>
                     <td>最初に出てくる文字</td>
                     <td><input id="popup-select-title" type="text" size="50" placeholder="提督 仕事しろ"></td>
                 </tr>
