focus on Exist, launch on NotExist

--- a/src/html/more.html
+++ b/src/html/more.html
@@ -34,6 +34,10 @@
                     <td><input id="enable-screen-shot" type="checkbox"></td>
                 </tr>
                 <tr>
+                    <td>通知ポップアップをクリックしたらLAUNCHする</td>
+                    <td><input id="launch-on-click-notification" type="checkbox"></td>
+                </tr>
+                <tr>
                     <td>最初に出てくる文字</td>
                     <td><input id="popup-select-title" type="text" size="50" placeholder="提督 仕事しろ"></td>
                 </tr>
