--- a/src/html/more.html
+++ b/src/html/more.html
@@ -34,6 +34,10 @@
                     <td><input id="enable-screen-shot" type="checkbox"></td>
                 </tr>
                 <tr>
+                    <td>クロックモードボタン表示<br><span class="xsmall">ぱっと見ふつうの時計な感じ</span></td>
+                    <td><input id="show-clockmode-button" type="checkbox"></td>
+                </tr>
+                <tr>
                     <td>通知ポップアップをクリックしたらLAUNCHする</td>
                     <td><input id="launch-on-click-notification" type="checkbox"></td>
                 </tr>
