description of clock mode

--- a/src/html/more.html
+++ b/src/html/more.html
@@ -34,7 +34,7 @@
                     <td><input id="enable-screen-shot" type="checkbox"></td>
                 </tr>
                 <tr>
-                    <td>クロックモードボタン表示<br><span class="xsmall">ぱっと見ふつうの時計な感じ</span></td>
+                    <td>クロックモードボタン表示<br><span class="xsmall">上司に見れれても大丈夫。そこまでしますか</span></td>
                     <td><input id="show-clockmode-button" type="checkbox"></td>
                 </tr>
                 <tr>
