--- a/src/html/more.html
+++ b/src/html/more.html
@@ -15,7 +15,7 @@
                 </tr>
                 <tr>
                     <td>バージョン</td>
-                    <td>0.2.7</td>
+                    <td>0.2.7.1</td>
                 </tr>
                 <tr>
                     <td>残り時間をバッチ表示する<a href="https://pbs.twimg.com/media/BTJoojqCMAAqFy3.png"><img src="https://pbs.twimg.com/media/BTNXZaCCIAADciW.png" width="30px"></a></td>
@@ -34,7 +34,7 @@
                     <td><input id="enable-screen-shot" type="checkbox"></td>
                 </tr>
                 <tr>
-                    <td>クロックモードボタン表示<br><span class="xsmall">上司に見れれても大丈夫。そこまでしますか</span></td>
+                    <td>クロックモードボタン表示<br><span class="xsmall">上司に見られても大丈夫。そこまでしますか</span></td>
                     <td><input id="show-clockmode-button" type="checkbox"></td>
                 </tr>
                 <tr>
