通知メッセージ変更試し。 #18

--- a/src/html/more.html
+++ b/src/html/more.html
@@ -49,6 +49,14 @@
                     <td>最初に出てくる文字</td>
                     <td><input id="popup-select-title" type="text" size="50" placeholder="提督 仕事しろ"></td>
                 </tr>
+                <tr>
+                    <td>遠征通知時に出てくる文字<br><span class="xsmall">艦隊をタスクとかに変えたらより自然に</span></td>
+                    <td>
+                        遠征完了時：<input id="notification-mission-end-suffix" type="text" size="35" placeholder="艦隊がまもなく帰投します"><br>
+                        入渠完了時：<input id="notification-nyukyo-end-suffix" type="text" size="35" placeholder="入渠ドックの修復作業がまもなく完了します"><br>
+                        建造完了時：<input id="notification-createship-end-suffix" type="text" size="35" placeholder="建造ドックでの建造作業がまもなく完了します"><br>
+                    </td>
+                </tr>
                 <tr class="yet">
                     <td>建造レシピメモ</td>
                     <td><input type="text" size="50" placeholder="400/10/600/10 とか" disabled></td>
