--- a/src/html/more.html
+++ b/src/html/more.html
@@ -25,11 +25,8 @@
                     <td><input id="badge-left-time" type="checkbox"></td>
                 </tr>
                 <tr>
-                    <td>入渠時・建造時のリマインダ手動登録機能を有効にする</td>
-                    <td>
-                        <input id="enable-manual-reminder" type="checkbox">
-                        <span class="xsmall">注意：現在自動取得を開発中です！近日リリース！</span>
-                    </td>
+                    <td>(自動取得に失敗したとき)入渠・建造リマインダー手動登録機能を有効にする<br><span class="xsmall">回線の遅い場合に失敗することが多いです</span></td>
+                    <td><input id="enable-manual-reminder" type="checkbox"></td>
                 </tr>
                 <tr>
                     <td colspan="2"><h4>[アイコンツール関係]</h4></td>
