partial setting for reminder set and finish

--- a/src/html/more.html
+++ b/src/html/more.html
@@ -72,8 +72,11 @@
                     <td><input id="launch-on-click-notification" type="checkbox"></td>
                 </tr>
                 <tr>
-                    <td>リマインダー登録時も通知ポップアップしてほしいです</td>
-                    <td><input id="notification-on-set-reminder" type="checkbox"></td>
+                    <td>通知ポップアップするタイミング</td>
+                    <td>
+                        <input id="notification-on-reminder-set" type="checkbox">登録時ポップアップ<br>
+                        <input id="notification-on-reminder-finish" type="checkbox">終了時ポップアップ
+                    </td>
                 </tr>
                 <tr>
                     <td>遠征通知時に出てくる文字<br><span class="xsmall">艦隊をタスクとかに変えたらより自然に</span></td>
