prepare for multi hosts

--- a/src/html/more.html
+++ b/src/html/more.html
@@ -25,8 +25,8 @@
                     <td><input id="badge-left-time" type="checkbox"></td>
                 </tr>
                 <tr>
-                    <td>(自動取得に失敗したとき)入渠・建造リマインダー手動登録機能を有効にする<br><span class="xsmall">回線の遅い場合に失敗することが多いです</span></td>
-                    <td><input id="enable-manual-reminder" type="checkbox"></td>
+                    <td>建造リマインダー登録機能を有効にする<br>(入渠はまだ<span class="xsmall">クレーンが邪魔で時間の画像が取れない...(´・ω・`)</span>)<br><span class="xsmall">注意：回線が遅い場合に失敗することが多いです</span></td>
+                    <td><input id="enable-dynamic-reminder" type="checkbox"></td>
                 </tr>
                 <tr>
                     <td colspan="2"><h4>[アイコンツール関係]</h4></td>
