--- a/src/html/more.html
+++ b/src/html/more.html
@@ -25,7 +25,7 @@
                     <td><input id="badge-left-time" type="checkbox"></td>
                 </tr>
                 <tr>
-                    <td>建造リマインダー登録機能を有効にする<br>(入渠はまだ<span class="xsmall">クレーンが邪魔で時間の画像が取れない...(´・ω・`)</span>)<br><span class="xsmall">注意：回線が遅い場合に失敗することが多いです</span></td>
+                    <td>入渠・建造時リマインダー登録機能を有効にする<br><span class="xsmall">注意：回線が遅い/画面解像度が低い/ウィジェットが小さい、と失敗することが多いです</span></td>
                     <td><input id="enable-dynamic-reminder" type="checkbox"></td>
                 </tr>
                 <tr>
